<?xml version="1.0"?>
<package format="3">
  <name>my_cpp_sub_pub</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mocap4r2_msgs</build_depend>
  <build_depend>px4_msgs</build_depend>
  <build_depend>px4_ros_com</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mocap4r2_msgs</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>px4_ros_com</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
